--- a/debhelper.pod
+++ b/debhelper.pod
@@ -299,7 +299,7 @@ the generated dependancy line in the shlibs file.
 =item -
 
 You are encouraged to put the new ${misc:Depends} into debian/control to
-suppliment the ${shlibs:Depends} field.
+supplement the ${shlibs:Depends} field.
 
 =item -
 
