--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,11 @@
-debhelper (4.2.31) UNRELEASED; urgency=low
+debhelper (4.2.31) unstable; urgency=low
 
   * Updated dh_installmime Spanish translation.
+  * Spelling fix. Closes: #293158
+  * Patch from Matthias to split out a package_arch and export it in Dh_Lib.
+    Closes: #295383
 
- -- Joey Hess <joeyh@debian.org>  Thu, 20 Jan 2005 15:22:55 -0500
+ -- Joey Hess <joeyh@debian.org>  Wed, 16 Feb 2005 13:47:29 -0500
 
 debhelper (4.2.30) unstable; urgency=low
 
