--- a/man/es/dh_fixperms.pod
+++ b/man/es/dh_fixperms.pod
@@ -25,7 +25,7 @@ examples/) se 644. También cambia el modo de las páginas del manual a 644. Hace
 que todos los ficheros pertenezcan al superusuario y elimina los permisos de
 escritura del grupo y de otros. Elimina los permisos de ejecución de cualquier
 biblioteca. Hace ejecutables todos los ficheros en bin/, /usr/games/ y en
-etc/init.d (sólo v4). Finalmente, finalmente elimina los bit setuid y setgid de
+etc/init.d (sólo v4). Finalmente, elimina los bit setuid y setgid de
 todos los ficheros en el paquete.
 
 =head1 OPCIONES
