--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+debhelper (4.2.32) unstable; urgency=low
+
+  * Patch from Fabio Tranchitella to add support for #DEBHELPER# substitutions
+    in config files, although nothing in debhelper itself uses such
+    substitutions, third-party addons may. Closes: #301657
+  * Factor out a debhelper_script_subst from dh_installdeb and
+    dh_installdebconf.
+
+ -- Joey Hess <joeyh@debian.org>  Sun, 27 Mar 2005 11:29:01 -0500
+
 debhelper (4.2.31) unstable; urgency=low
 
   * Updated dh_installmime Spanish translation.
