r1745:   * Update Spanish translation of dh_clean man page. Closes: #303052

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (4.2.33) UNRELEASED; urgency=low
+
+  * Update Spanish translation of dh_clean man page. Closes: #303052
+
+ -- Joey Hess <joeyh@debian.org>  Sat,  9 Apr 2005 17:27:12 -0400
+
 debhelper (4.2.32) unstable; urgency=low
 
   * Patch from Fabio Tranchitella to add support for #DEBHELPER# substitutions
