r1746:   * dh_installmodules autoscripts: Now that return code 3 is allocated by     update-modules to indicate /etc/modules.conf is not automatically     generated, we can ignore that return code since it's not a condition that     should fail an installation. Closes: #165400

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,10 @@
 debhelper (4.2.33) UNRELEASED; urgency=low
 
   * Update Spanish translation of dh_clean man page. Closes: #303052
+  * dh_installmodules autoscripts: Now that return code 3 is allocated by
+    update-modules to indicate /etc/modules.conf is not automatically
+    generated, we can ignore that return code since it's not a condition that
+    should fail an installation. Closes: #165400
 
  -- Joey Hess <joeyh@debian.org>  Sat,  9 Apr 2005 17:27:12 -0400
 
