--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (4.2.34) unstable; urgency=low
+
+  * The infinite number of monkeys release.
+  * dh_md5sums: don't crash if PWD contains an apostrophe. Closes: #305226
+
+ -- Joey Hess <joeyh@debian.org>  Wed, 20 Apr 2005 21:06:43 -0400
+
 debhelper (4.2.33) unstable; urgency=low
 
   * Update Spanish translation of dh_clean man page. Closes: #303052
