--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (4.2.35) UNRELEASED; urgency=low
+
+  * Man page typo fixes. Closes: #305809, #305804, #305815, #305810
+    Closes: #305812, #305814, #305819, #305818, #305817, #305822
+
+ -- Joey Hess <joeyh@debian.org>  Fri, 22 Apr 2005 11:27:55 -0400
+
 debhelper (4.2.34) unstable; urgency=low
 
   * The infinite number of monkeys release.
