--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (4.2.35) UNRELEASED; urgency=low
+debhelper (4.2.35) unstable; urgency=low
 
   * Man page typo fixes. Closes: #305809, #305804, #305815, #305810
     Closes: #305812, #305814, #305819, #305818, #305817, #305822
