r1757:   * Spanish translation update for dh_installdebconf(1).

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (4.2.36) UNRELEASED; urgency=low
+
+  * Spanish translation update for dh_installdebconf(1).
+
+ -- Joey Hess <joeyh@debian.org>  Thu,  5 May 2005 11:29:07 -0400
+
 debhelper (4.2.35) unstable; urgency=low
 
   * Man page typo fixes. Closes: #305809, #305804, #305815, #305810
