--- a/man/es/dh_installdebconf.pod
+++ b/man/es/dh_installdebconf.pod
@@ -1,7 +1,7 @@
 # (c) 2003 Software in the Public Interest
 # Esta traducción ha sido realizada por Rubén Porras Campo <nahoo@inicia.es>
 # Está basada en la página de manual original:
-# versión 1.1 del CVS de
+# versión 1.2 del CVS de
 # /cvs/debian-doc/manpages/english/debhelper/dh_installdebconf.pod
 
 =head1 NOMBRE
@@ -24,6 +24,13 @@ de como funciona esto.
 
 Los ficheros llamado debian/paquete.config y debian/paquete.templates se
 instalan en el directorio DEBIAN en el directorio de construcción del paquete.
+
+Si existe el fichero debian/paquete.config.debhelper, los contenidos de ese
+fichero se mezclan con el fichero de configuración del siguiente modo: Si el
+script existe, entonces se inserta el texto del fichero .debhelper en todos los
+lugares en los que aparezca "#DEBHELPER#". Si no existe, se genera un script
+desde el fichero .debhelper. El fichero .debhelper pueden crearlo otros
+programas de debhelper, y está compuesto de fragmentos de scripts para la shell.
 
 Dese cuenta de que si usa debconf, probablemente su paquete dependa de él
 (será añadido a ${misc:Depends} por este programa).
