--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-debhelper (4.2.36) UNRELEASED; urgency=low
+debhelper (4.2.36) unstable; urgency=low
 
   * Spanish translation update for dh_installdebconf(1).
+  * YA man page typo fix. Closes: #308182
 
- -- Joey Hess <joeyh@debian.org>  Thu,  5 May 2005 11:29:07 -0400
+ -- Joey Hess <joeyh@debian.org>  Sun,  8 May 2005 13:02:22 -0400
 
 debhelper (4.2.35) unstable; urgency=low
 
