--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+debhelper (4.2.37) unstable; urgency=low
+
+  * Document getpackages in PROGRAMMING.
+  * Patch from Jeff Bailey to make dh_python set $python_version if -V is
+    specified so it looks in the right site-packages directories.
+    Closes: #312661
+
+ -- Joey Hess <joeyh@debian.org>  Thu,  9 Jun 2005 10:01:20 -0400
+
 debhelper (4.2.36) unstable; urgency=low
 
   * Spanish translation update for dh_installdebconf(1).
