r1762:   * Add another test-case for dh_link.   * dh_python: Minimal fix from Joss for -V to make it search the right     site-packages directories. Closes: #312661   *

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,10 @@
-debhelper (4.2.37) unstable; urgency=low
+debhelper (4.2.38) UNRELEASED; urgency=low
 
   * Document getpackages in PROGRAMMING.
-  * Patch from Jeff Bailey to make dh_python set $python_version if -V is
-    specified so it looks in the right site-packages directories.
-    Closes: #312661
+  * Add another test-case for dh_link.
+  * dh_python: Minimal fix from Joss for -V to make it search the right
+    site-packages directories. Closes: #312661
+  * 
 
  -- Joey Hess <joeyh@debian.org>  Thu,  9 Jun 2005 10:01:20 -0400
 
