--- a/doc/TODO
+++ b/doc/TODO
@@ -36,7 +36,6 @@ Wishlist items:
 
 v5:
 
-* comments in config files 
 * escaping in config files (for whitespace)?
 * make dh_installman set up slave links, always assuming wm and man page
   are in same area (/usr/bin and /usr/share/man, or /usr/X11/). Or, if the
@@ -45,9 +44,9 @@ v5:
 
 Deprecated:
 
-* DH_COMPAT 1. Can be removed once all packages are seen to be using 2 or
-  higher. I won't hold my breath.
-* Also, grep the entire archive for all dh_* command lines (I do this now),
+* DH_COMPAT 1, 2. Can be removed once all packages are seen to be using 3 or
+  higher. I won't hold my breath. Now with evil warning messages though.
+* Also, grep the entire archive for all dh_* command lines,
   and check to see what other switches are not being used, and maybe remove
   some of them. I'd also like to deprecate/remove debian/compress files, -X is
   a better idea.
