--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (4.9.1) unstable; urgency=low
+
+  * Fix typo in dh_strip.
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 13 Jun 2005 20:32:12 -0400
+
 debhelper (4.9.0) unstable; urgency=low
 
   * Begin work on compatability level 5. The set of changes in this mode is
