--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (4.9.2) UNRELEASED; urgency=low
+
+  * Fix typo in dh_install example. Closes: #314964
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 20 Jun 2005 16:17:05 -0400
+
 debhelper (4.9.1) unstable; urgency=low
 
   * Fix typo in dh_strip.
