--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
-debhelper (4.9.2) UNRELEASED; urgency=low
+debhelper (4.9.2) unstable; urgency=low
 
   * Fix typo in dh_install example. Closes: #314964
+  * Fix deprecation message. Closes: #315517
 
  -- Joey Hess <joeyh@debian.org>  Mon, 20 Jun 2005 16:17:05 -0400
 
