--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (4.9.3) unstable; urgency=high
+
+  * Fix typo in postrm-modules fragment. Closes: #316069
+    Recommend any dh_installmodules users rebuild ASAP.
+
+ -- Joey Hess <joeyh@debian.org>  Tue, 28 Jun 2005 17:41:51 -0400
+
 debhelper (4.9.2) unstable; urgency=low
 
   * Fix typo in dh_install example. Closes: #314964
