r1774: * dh_install: in v5 mode, error out if there are wildcards in the file   list and the wildcards expand to nothing. Done only for v5 as this is a   behavior change.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (4.9.5) UNRELEASED; urgency=low
+
+  * dh_install: in v5 mode, error out if there are wildcards in the file
+    list and the wildcards expand to nothing. Done only for v5 as this is a
+    behavior change.
+
+ -- Joey Hess <joeyh@debian.org>  Tue, 19 Jul 2005 13:48:52 -0400
+
 debhelper (4.9.4) unstable; urgency=low
 
   * dh_clean: switch to using complex_doit for the evil find command
