--- a/debian/changelog
+++ b/debian/changelog
@@ -2,7 +2,7 @@ debhelper (4.9.5) UNRELEASED; urgency=low
 
   * dh_install: in v5 mode, error out if there are wildcards in the file
     list and the wildcards expand to nothing. Done only for v5 as this is a
-    behavior change.
+    behavior change. Closes: #249815
 
  -- Joey Hess <joeyh@debian.org>  Tue, 19 Jul 2005 13:48:52 -0400
 
