r1776: * dh_usrlocal: generate prerm scripts that do not remove distroties in   /usr/local, but only subdirectories thereof, in accordance with policy.   Closes: #319181

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,8 +3,11 @@ debhelper (4.9.5) UNRELEASED; urgency=low
   * dh_install: in v5 mode, error out if there are wildcards in the file
     list and the wildcards expand to nothing. Done only for v5 as this is a
     behavior change. Closes: #249815
+  * dh_usrlocal: generate prerm scripts that do not remove distroties in
+    /usr/local, but only subdirectories thereof, in accordance with policy.
+    Closes: #319181
 
- -- Joey Hess <joeyh@debian.org>  Tue, 19 Jul 2005 13:48:52 -0400
+ -- Joey Hess <joeyh@debian.org>  Wed, 20 Jul 2005 10:08:05 -0400
 
 debhelper (4.9.4) unstable; urgency=low
 
