--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (4.9.5) UNRELEASED; urgency=low
+debhelper (4.9.5) unstable; urgency=low
 
   * dh_install: in v5 mode, error out if there are wildcards in the file
     list and the wildcards expand to nothing. Done only for v5 as this is a
