--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (4.9.6) unstable; urgency=low
+
+  * dh_installdocs: Install symlinks to in -x mode, same as in non exclude
+    mode. Closes: #324161
+
+ -- Joey Hess <joeyh@debian.org>  Wed, 24 Aug 2005 16:20:02 -0400
+
 debhelper (4.9.5) unstable; urgency=low
 
   * dh_install: in v5 mode, error out if there are wildcards in the file
