--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (4.9.7) unstable; urgency=low
+
+  * dh_installdocs: Fix stupid and horrible typo. Closes: #325098
+
+ -- Joey Hess <joeyh@debian.org>  Fri, 26 Aug 2005 09:20:47 -0400
+
 debhelper (4.9.6) unstable; urgency=low
 
   * dh_installdocs: Install symlinks to in -x mode, same as in non exclude
