--- a/doc/TODO
+++ b/doc/TODO
@@ -7,7 +7,7 @@ Wishlist items:
   to accept (rather than accepting all debhelper options). They should
   be able to print brief usage summaries.
 
-  I think this calls for a restucturing. Make a Debhelper.pm class. Each
+  I think this calls for a restructuring. Make a Debhelper.pm class. Each
   program subclasses the class. The class provides command line parsing,
   useful functions, and so on. Skeleton of a debhelper command would then
   be:
