--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (4.9.8) unstable; urgency=low
+
+  * Spelling patch from Kumar Appaiah. Closes: #324892
+
+ -- Joey Hess <joeyh@debian.org>  Fri, 26 Aug 2005 22:12:41 -0400
+
 debhelper (4.9.7) unstable; urgency=low
 
   * dh_installdocs: Fix stupid and horrible typo. Closes: #325098
