--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (4.9.9) UNRELEASED; urgency=low
+
+  * dh_shlibdeps: Avoid a use strict warning in some cases if 
+    LD_LIBRARY_PATH is not set. 
+
+ -- Joey Hess <joeyh@debian.org>  Wed,  7 Sep 2005 15:32:53 -0400
+
 debhelper (4.9.8) unstable; urgency=low
 
   * Spelling patch from Kumar Appaiah. Closes: #324892
