--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,19 @@
-debhelper (4.9.9) UNRELEASED; urgency=low
+debhelper (4.9.9) unstable; urgency=low
 
   * dh_shlibdeps: Avoid a use strict warning in some cases if 
     LD_LIBRARY_PATH is not set. 
+  * ACK NMU. Closes: #327209
 
  -- Joey Hess <joeyh@debian.org>  Wed,  7 Sep 2005 15:32:53 -0400
+
+debhelper (4.9.8.1) unstable; urgency=low
+
+  * NMU with maintainer approval.
+  * dh_gconf: delegate schema registration the gconf-schemas script, 
+    which moves schemas to /var/lib/gconf, and require gconf2 2.10.1-2,
+    where it can be found. Closes: #327209
+
+ -- Josselin Mouette <joss@debian.org>  Wed, 21 Sep 2005 23:39:01 +0200
 
 debhelper (4.9.8) unstable; urgency=low
 
