r1788: * Patch from Valéry Perrin to use po4a for localised manpages. Thanks!   Closes: #328791

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (4.9.10) unstable; urgency=low
+
+  * Patch from Valéry Perrin to use po4a for localised manpages. Thanks!
+    Closes: #328791
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 22 Sep 2005 23:11:12 +0200
+
 debhelper (4.9.9) unstable; urgency=low
 
   * dh_shlibdeps: Avoid a use strict warning in some cases if 
