--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (4.9.11) unstable; urgency=low
+
+  * Patch from Valéry Perrin to update the Spanish translation.
+    Closes: #329132
+
+ -- Joey Hess <joeyh@debian.org>  Tue, 27 Sep 2005 10:26:07 -0400
+
 debhelper (4.9.10) unstable; urgency=low
 
   * Patch from Valéry Perrin to use po4a for localised manpages. Thanks!
