--- a/po/es.po
+++ b/po/es.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2005-09-22 23:12+0200\n"
+"POT-Creation-Date: 2005-10-02 12:01-0400\n"
 "PO-Revision-Date: 2005-09-18 00:11+0200\n"
 "Last-Translator: Rubén Porras Campo <debian-l10n-spanish@lists.debian.org>\n"
 "Language-Team: SPANISH <debian-l10n-spanish@lists.debian.org>\n"
@@ -130,7 +130,7 @@ msgstr ""
 #: debhelper.pod:424 dh_clean:109 dh_undocumented:28 dh_testversion:74
 #: dh_testdir:43 dh_shlibdeps:148 dh_scrollkeeper:75 dh_installdirs:87
 #: dh_link:206 dh_installdebconf:135 dh_installmime:84 dh_installwm:94
-#: dh_installdeb:91 dh_builddeb:78 dh_gencontrol:73 dh_install:251
+#: dh_installdeb:93 dh_builddeb:78 dh_gencontrol:73 dh_install:251
 #: dh_makeshlibs:183 dh_perl:140 dh_fixperms:107 dh_listpackages:28
 #: dh_installman:210 dh_testroot:26 dh_movefiles:162 dh_desktop:43
 #: dh_suidregister:117 dh_installchangelogs:125 dh_python:266
@@ -146,7 +146,7 @@ msgstr "VÉASE ADEMÁS"
 #: dh_installmodules:104 dh_installlogrotate:52 dh_clean:111
 #: dh_undocumented:30 dh_testversion:76 dh_testdir:45 dh_installdirs:89
 #: dh_link:208 dh_installdebconf:137 dh_installmime:86 dh_installwm:96
-#: dh_installdeb:93 dh_builddeb:80 dh_gencontrol:75 dh_install:253
+#: dh_installdeb:95 dh_builddeb:80 dh_gencontrol:75 dh_install:253
 #: dh_makeshlibs:185 dh_perl:142 dh_fixperms:109 dh_listpackages:30
 #: dh_installman:212 dh_testroot:28 dh_movefiles:164 dh_suidregister:119
 #: dh_installchangelogs:127 dh_python:268 dh_installdocs:234
@@ -162,7 +162,7 @@ msgstr "L<debhelper(7)>"
 #: dh_installmodules:106 dh_installmenu:85 dh_installlogrotate:54 dh_clean:113
 #: dh_undocumented:32 dh_testversion:78 dh_testdir:47 dh_shlibdeps:152
 #: dh_scrollkeeper:79 dh_installdirs:91 dh_link:210 dh_installdebconf:139
-#: dh_installmime:88 dh_installwm:98 dh_installdeb:95 dh_builddeb:82
+#: dh_installmime:88 dh_installwm:98 dh_installdeb:97 dh_builddeb:82
 #: dh_gencontrol:77 dh_install:255 dh_makeshlibs:187 dh_perl:144
 #: dh_fixperms:111 dh_listpackages:32 dh_installman:214 dh_testroot:30
 #: dh_movefiles:166 dh_desktop:47 dh_suidregister:121 dh_installchangelogs:129
@@ -178,7 +178,7 @@ msgstr "Este programa es parte de debhelper."
 #: debhelper.pod:438 dh_clean:115 dh_undocumented:34 dh_testversion:80
 #: dh_testdir:49 dh_shlibdeps:154 dh_scrollkeeper:81 dh_installdirs:93
 #: dh_link:212 dh_installdebconf:141 dh_installmime:90 dh_installwm:100
-#: dh_installdeb:97 dh_builddeb:84 dh_gencontrol:79 dh_install:257
+#: dh_installdeb:99 dh_builddeb:84 dh_gencontrol:79 dh_install:257
 #: dh_makeshlibs:189 dh_perl:146 dh_fixperms:113 dh_listpackages:34
 #: dh_installman:216 dh_testroot:32 dh_movefiles:168 dh_desktop:49
 #: dh_suidregister:123 dh_installchangelogs:131 dh_python:272
@@ -194,7 +194,7 @@ msgstr "AUTOR"
 #: dh_installmenu:89 dh_installlogrotate:58 debhelper.pod:440 dh_clean:117
 #: dh_undocumented:36 dh_testversion:82 dh_testdir:51 dh_shlibdeps:156
 #: dh_installdirs:95 dh_link:214 dh_installdebconf:143 dh_installmime:92
-#: dh_installwm:102 dh_installdeb:99 dh_builddeb:86 dh_gencontrol:81
+#: dh_installwm:102 dh_installdeb:101 dh_builddeb:86 dh_gencontrol:81
 #: dh_install:259 dh_makeshlibs:191 dh_fixperms:115 dh_listpackages:36
 #: dh_installman:218 dh_testroot:34 dh_movefiles:170 dh_suidregister:125
 #: dh_installchangelogs:133 dh_installdocs:240 dh_installmanpages:209
@@ -507,8 +507,8 @@ msgid ""
 "For example, if your packages are lifoo and foo and you want to include a "
 "foo-dbg package with debugging symbols, use dh_strip --dbg-to=foo-dbg."
 msgstr ""
-"Por ejemplo, si sus paquetes son libtal y tal y quiere incluir una paquete"
-"tal-dbg con símbolos de depuración, use dh_strip --dbg-to=tal-dbg."
+"Por ejemplo, si sus paquetes son libtal y tal y quiere incluir una "
+"paquetetal-dbg con símbolos de depuración, use dh_strip --dbg-to=tal-dbg."
 
 # type: textblock
 #: dh_strip:54
@@ -519,12 +519,12 @@ msgid ""
 "have separated debug symbols, and the separated symbols are placed in "
 "packages with \"-dbg\" added to their name."
 msgstr ""
-"Tenga en cuenta que esta opción se comporta de forma significativamente"
-"distinta en los niveles de compatibilidad de debhelper 4 o inferiores. En"
-"lugar de especificar el nombre de un paquete de depuración en el que poner"
-"los símbolos, especifica un paquete (o paquetes) que deben tener símbolos"
-"de depuración separados, y los símbolos separados son colocados en paquetes"
-"con \"-dbg\" al final de su nombre"
+"Tenga en cuenta que esta opción se comporta de forma "
+"significativamentedistinta en los niveles de compatibilidad de debhelper 4 o "
+"inferiores. Enlugar de especificar el nombre de un paquete de depuración en "
+"el que ponerlos símbolos, especifica un paquete (o paquetes) que deben tener "
+"símbolosde depuración separados, y los símbolos separados son colocados en "
+"paquetescon \"-dbg\" al final de su nombre"
 
 # type: textblock
 #: dh_strip:60
@@ -1549,8 +1549,9 @@ msgstr ""
 msgid ""
 "You can also put comments in these files; lines beginning with \"#\" are "
 "ignored."
-msgstr "También puede poner comentarios en estos ficheros, simplemente"
-"comience las líneas con el símbolo \"#\""
+msgstr ""
+"También puede poner comentarios en estos ficheros, simplementecomience las "
+"líneas con el símbolo \"#\""
 
 # type: =head1
 #: debhelper.pod:78
@@ -1827,8 +1828,8 @@ msgid ""
 "All debhelper commands that automatically generate code in this way let it "
 "be disabled by the -n parameter (see above)."
 msgstr ""
-"Todas las opciones de debhelper que generan código automáticamente de esta"
-"manera se pueden deshabilitar con el parámetro -n (ver arriba)."
+"Todas las opciones de debhelper que generan código automáticamente de "
+"estamanera se pueden deshabilitar con el parámetro -n (ver arriba)."
 
 # type: textblock
 #: debhelper.pod:194
@@ -2130,16 +2131,17 @@ msgstr "Esté modo todavía está en desarrollo. Los cambios respecto a V4 son:"
 # type: textblock
 #: debhelper.pod:329
 msgid "Comments are ignored in debhelper config files."
-msgstr "Se ignoran los comentarios en los ficheros de configuración de "
-"debhelper."
+msgstr ""
+"Se ignoran los comentarios en los ficheros de configuración de debhelper."
 
 # type: textblock
 #: debhelper.pod:333
 msgid ""
 "dh_strip --dbg-package now specifies the name of a package to put debugging "
 "symbols in, not the packages to take the symbols from."
-msgstr "dh_strip --dbg-paquete ahora especifica el nombre del paquete en el que "
-"se colocan los símbolos de depuración, no los paquetes desde los que obtener "
+msgstr ""
+"dh_strip --dbg-paquete ahora especifica el nombre del paquete en el que se "
+"colocan los símbolos de depuración, no los paquetes desde los que obtener "
 "los símbolos."
 
 # type: textblock
@@ -3094,9 +3096,9 @@ msgstr ""
 "los contenidos de ese fichero se mezclan con los del script «config» del "
 "siguiente modo: Si el script existe, entonces en todos los sitios donde "
 "aparezca «#DEBHELPER#», se inserta el texto del fichero .debhelper. Si no "
-"existe, se genera desde el fichero .debhelper. Los ficheros .debhelper pueden "
-"ser creados por otros programas de debhelper, y son fragmentos de scripts "
-"línea de órdenes."
+"existe, se genera desde el fichero .debhelper. Los ficheros .debhelper "
+"pueden ser creados por otros programas de debhelper, y son fragmentos de "
+"scripts línea de órdenes."
 
 # type: textblock
 #: dh_installdebconf:34
