--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (4.9.12) unstable; urgency=low
+
+  * dh_installdeb: Don't autogenerate conffiles for udebs.
+    Let's ignore conffiles (and shlibs) files for udebs too.
+    Closes: #331237
+
+ -- Joey Hess <joeyh@debian.org>  Sun,  2 Oct 2005 12:00:22 -0400
+
 debhelper (4.9.11) unstable; urgency=low
 
   * Patch from Valéry Perrin to update the Spanish translation.
