r1795: * dh_strip: Man page typo fix. Closes: #332747

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (4.9.13) UNRELEASED; urgency=low
+
+  * dh_strip: Man page typo fix. Closes: #332747
+
+ -- Joey Hess <joeyh@debian.org>  Sat,  8 Oct 2005 12:31:22 -0400
+
 debhelper (4.9.12) unstable; urgency=low
 
   * dh_installdeb: Don't autogenerate conffiles for udebs.
