--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (4.9.13) UNRELEASED; urgency=low
+debhelper (4.9.13) unstable; urgency=low
 
   * dh_strip: Man page typo fix. Closes: #332747
 
