--- a/po/debhelper.pot
+++ b/po/debhelper.pot
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2005-10-02 12:01-0400\n"
+"POT-Creation-Date: 2005-10-12 22:18-0400\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -321,7 +321,7 @@ msgstr ""
 #: dh_strip:51
 msgid ""
 "For example, if your packages are lifoo and foo and you want to include a "
-"foo-dbg package with debugging symbols, use dh_strip --dbg-to=foo-dbg."
+"foo-dbg package with debugging symbols, use dh_strip --dbg-package=foo-dbg."
 msgstr ""
 
 # type: textblock
