r1798: * dh_installmanpages: Remove X11 man page special case; X man pages are ok   in standard man dirs.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (4.9.14) UNRELEASED; urgency=low
+
+  * dh_installmanpages: Remove X11 man page special case; X man pages are ok
+    in standard man dirs.
+
+ -- Joey Hess <joeyh@debian.org>  Wed, 12 Oct 2005 23:13:20 -0400
+
 debhelper (4.9.13) unstable; urgency=low
 
   * dh_strip: Man page typo fix. Closes: #332747
