--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ debhelper (4.9.14) UNRELEASED; urgency=low
 
   * dh_installmanpages: Remove X11 man page special case; X man pages are ok
     in standard man dirs.
+  * French mn page translation update. Closes: #335178, #334765
 
  -- Joey Hess <joeyh@debian.org>  Wed, 12 Oct 2005 23:13:20 -0400
 
