--- a/po/fr.po
+++ b/po/fr.po
@@ -6,8 +6,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: fr\n"
-"POT-Creation-Date: 2005-10-12 22:18-0400\n"
-"PO-Revision-Date: 2005-09-17 14:47+0200\n"
+"POT-Creation-Date: 2005-10-22 11:37+0200\n"
+"PO-Revision-Date: 2005-10-22 11:54+0200\n"
 "Last-Translator: Valery Perrin <valery.perrin.debian@free.fr>\n"
 "Language-Team: Français <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -521,8 +521,7 @@ msgid ""
 msgstr ""
 "Par exemple, si les paquets se nomment libtoto et toto et que l'on veut "
 "inclure un paquet toto-dbg avec les symboles de mise au point, il faut "
-"utiliser dh_strip --dbg-to=toto-dbg. (S<NdT :> dh_strip --dbg-package=toto-"
-"dbg semblerait plus conforme au synopsis.)"
+"utiliser dh_strip --dbg-package=toto-dbg."
 
 # type: textblock
 #: dh_strip:54
@@ -2696,8 +2695,8 @@ msgid ""
 "once for each package listed in the control file, passing it a list of ELF "
 "executables and shared libraries it has found."
 msgstr ""
-"Ce programme est simplement une encapsulation de L<dpkg-shlibdeps(1)> qui "
-"l'invoque une fois pour chaque paquet énuméré dans le fichier S<« control »> "
+"Ce programme est simplement une encapsulation de L<dpkg-shlibdeps(1)> qu'il "
+"invoque une fois pour chaque paquet énuméré dans le fichier S<« control »> "
 "en lui passant une liste des exécutables ELF et des bibliothèques partagées "
 "qu'il a trouvés."
 
@@ -2789,9 +2788,9 @@ msgid ""
 "it. In your rules file, first run dh_makeshlibs, then dh_shlibdeps:"
 msgstr ""
 "Supposons que le paquet source produise les paquets binaires libtoto1, "
-"libtoto-dev et libtoto-bin. libtoto1 est lié à libtoto-bin et doit donc en "
-"dépendre. Dans le fichier rules il faut d'abord exécuter dh_makeshlibs puis "
-"S<dh_shlibdeps :>"
+"libtoto-dev et libtoto-bin. libtoto-bin utilise la bibliothèque libtoto1 et "
+"doit donc en dépendre. Dans le fichier rules il faut d'abord exécuter "
+"dh_makeshlibs puis S<dh_shlibdeps :>"
 
 # type: verbatim
 #: dh_shlibdeps:71
