--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-debhelper (4.9.14) UNRELEASED; urgency=low
+debhelper (4.9.14) unstable; urgency=low
 
   * dh_installmanpages: Remove X11 man page special case; X man pages are ok
     in standard man dirs.
   * French mn page translation update. Closes: #335178, #334765
 
- -- Joey Hess <joeyh@debian.org>  Wed, 12 Oct 2005 23:13:20 -0400
+ -- Joey Hess <joeyh@debian.org>  Sat, 22 Oct 2005 13:41:09 -0400
 
 debhelper (4.9.13) unstable; urgency=low
 
