r1802: * Patches from Ghe Rivero to fix outdated paths in French and Spanish   translations of dh_installmenus(1). Closes: #335314

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (4.9.15) UNRELEASED; urgency=low
+
+  * Patches from Ghe Rivero to fix outdated paths in French and Spanish
+    translations of dh_installmenus(1). Closes: #335314
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 24 Oct 2005 17:36:04 -0400
+
 debhelper (4.9.14) unstable; urgency=low
 
   * dh_installmanpages: Remove X11 man page special case; X man pages are ok
