--- a/po/es.po
+++ b/po/es.po
@@ -1319,7 +1319,7 @@ msgid ""
 "share/menu/package in the package build directory. This is a debian menu "
 "file. See L<menufile(5)> for its format."
 msgstr ""
-"Si existe el fichero llamado debian/paquete.menu, se instala en usr/lib/menu/"
+"Si existe el fichero llamado debian/paquete.menu, se instala en usr/share/menu/"
 "paquete en el directorio de construcción. Este es un fichero de menú de "
 "Debian. Lea L<menufile(5)> para detalles acerca del formato."
 
@@ -2218,7 +2218,7 @@ msgstr ""
 "bajo debian/, lo creará. No me he preocupado por documentarlo en todas las "
 "páginas del manual, pero por ejemplo, dh_installdeb sabe hacer debian/"
 "<paquete>/DEBIAN/ antes de tratar de poner los ficheros allí, dh_installmenu "
-"sabe que necesita debian/<paquete>/usr/lib/menu/ antes de instalar los "
+"sabe que necesita debian/<paquete>/usr/share/menu/ antes de instalar los "
 "archivos del menú, etc."
 
 # type: textblock
