--- a/po/fr.po
+++ b/po/fr.po
@@ -1371,7 +1371,7 @@ msgid ""
 "menu method file."
 msgstr ""
 "S'il existe un fichier nommé debian/paquet.menu-method, il est installé, "
-"dans le répertoire de construction du paquet, sous usr/lib/menu-methods/"
+"dans le répertoire de construction du paquet, sous etc/menu-methods/"
 "paquet, en tant que fichier de méthode de menu Debian."
 
 # type: textblock
