--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,10 @@
-debhelper (4.9.15) UNRELEASED; urgency=low
+debhelper (4.9.15) unstable; urgency=low
 
   * Patches from Ghe Rivero to fix outdated paths in French and Spanish
     translations of dh_installmenus(1). Closes: #335314
+  * add.fr update. Closes: #335727
 
- -- Joey Hess <joeyh@debian.org>  Mon, 24 Oct 2005 17:36:04 -0400
+ -- Joey Hess <joeyh@debian.org>  Tue, 25 Oct 2005 19:51:54 -0400
 
 debhelper (4.9.14) unstable; urgency=low
 
