--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (5.0.1) unstable; urgency=low
+
+  * dh_installinfo: Escape section with \Q \E. Closes: #337215
+
+ -- Joey Hess <joeyh@debian.org>  Thu,  3 Nov 2005 11:04:21 -0500
+
 debhelper (5.0.0) unstable; urgency=low
 
   * debhelper v5 mode is finalised and the new recommended compatability
